--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g @tmux_mode_indicator_right_edge_character_fg "#8dc062"
 set -g @tmux_mode_indicator_left_edge_character_bg "#deb863"
 set -g @tmux_mode_indicator_after_interpolation_bg "#8dc062"
 set -g @tmux_mode_indicator_after_interpolation_fg "#000000"
+set -g mouse on
 
 set -g status-right "#[fg=#deb863]#[bg=#deb863,fg=#000000] %d/%m #{tmux_mode_indicator} %H:%M:%S "
 
